package edu.fiuba.algo3.modelo;

public interface Edificio {
    public RespuestasDelEvento visitarEdificio(Policia policia);
}
