@startuml

interface Edificio
{
    + visitarEdificio(policia:Policia): IRespuestaDelEvento
}
class EdificioConMaton
{
    - maton:Maton
    +visitar(policia:Policia): Amenaza
}
class EdificioConLadron
{
    - ladron:Ladron
    + visitar(policia:Policia): RespuestaDelEventos
    + ladronEntraAlEdificio(Ladron ladron)
}

class Biblioteca
{

}

class Banco
{

}

class Aeropuerto
{

}
class Puerto
{

}


class EdificioConPista
{
    - pista :Pista
    - visita: IVisita
    + visitar(policia Policia):Pista
}

EdificioConPista<|-- Banco
EdificioConPista<|-- Aeropuerto
EdificioConPista<|-- Puerto
EdificioConPista<|-- Biblioteca

Edificio <|... EdificioConLadron
Edificio <|... EdificioConMaton
Edificio <|... EdificioConPista


@enduml